...
        let flex = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil)
        
        let saveAge = UIBarButtonItem(title: loc("Done"),
                                      style: .done,
                                      target: textField,
                                      action: #selector(resignFirstResponder))
        saveAge.accessibilityIdentifier = "DoneKeyboard"
        
        keyboardToolbar.setItems([flex, saveAge], animated: false)
        
        textField.inputAccessoryView = keyboardToolbar
        dailyQuantityPicker.reloadAllComponents()
    }
...
