...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="era-du-EXS">
                                        <rect key="frame" x="231" y="1" width="49" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="overlayBtn"/>
                                        <state key="normal" title="Weight"/>
                                        <connections>
                                            <action selector="togleWeight:" destination="1Av-df-Kjf" eventType="touchUpInside" id="sxg-9I-LYf"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u72-6o-RJ1">
...
